# GrepolisMap

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  RELEASE.md  crosscompile.sh  index.html
.cargo/: config.toml
.github/workflows/: release.yaml
assets/: manifest.json  sw.js
locales/: map.de.yml  map.en.yml  map.fr.yml  menu.de.yml  menu.en.yml  menu.fr.yml  selection.de.yml  selection.en.yml  selection.fr.yml  sidepanel.de.yml  sidepanel.en.yml  sidepanel.fr.yml
src/: constraint.rs  egui_painer_demo.rs  emptyconstraint.rs  emptyselection.rs  main.rs  message.rs  presenter.rs  selection.rs  storage.rs  town.rs  towns.rs  wasm_utils.rs
src/model/: database.rs  download.rs  mod.rs  offset_data.rs  parse_sqlite.rs
src/telemetry/: mod.rs
src/view/: data.rs  dropdownbox.rs  eye_toggle.rs  map.rs  menu.rs  mod.rs  preferences.rs  selectable_label.rs  sidepanel.rs  state.rs
