[package]
name = "turunmap"
version = "1.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.22", features = ["serde", "persistence"]}
eframe = { version = "0.22", features = ["persistence", "wayland", "web_screen_reader"]}
egui_extras = "0.22"
reqwest = { version = "0.11.18", features=["gzip", "deflate", "blocking"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
form_urlencoded = "1.1.0"
rand = "0.8.5"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
anyhow = "1.0.71"
directories-next = "2.0.0"
time = { version="0.3.23", features=["formatting", "parsing", "local-offset", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
arboard = "3.2.0"
native-dialog = "0.6.4"
runtime-format = "0.1.3"
rust-i18n = "2.2.1"

[profile.release]
codegen-units = 1
debug = false
lto = true
incremental = false
opt-level = 3
overflow-checks = false
strip = "debuginfo"
