[package]
name = "turunmap"
version = "1.3.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.26", features = ["serde", "persistence"]}
eframe = { version = "0.26", features = ["persistence", "wayland", "web_screen_reader"]}
egui_extras = "0.26"
reqwest = { version = "0.11.18", features=["gzip", "deflate", "blocking"] }
form_urlencoded = "1.1.0"
rand = "0.8.5"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
anyhow = "1.0.71"
directories-next = "2.0.0"
time = { version="0.3.37", features=["formatting", "parsing", "local-offset", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
runtime-format = "0.1.3"
rust-i18n = "2.2.1"
ehttp = "0.5.0"

[target.'cfg(target_arch="wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }  # enable js feature in indirect "rand" dependency 
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)
wasm-bindgen = "0.2.99"
log = "0.4"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
arboard = "3.2.0"
native-dialog = "0.6.4"

[profile.release]
codegen-units = 1
debug = false
lto = true
incremental = false
opt-level = 3
overflow-checks = false
strip = "debuginfo"
