[package]
name = "turunmap"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.26", features = ["serde", "persistence"]}
eframe = {  version = "0.26",  features = ["persistence", "accesskit", "default_fonts", "glow", "wayland", "x11"],  default-features = false}
egui_extras = "0.26"
reqwest = { version = "0.11.18", features=["gzip", "deflate", "blocking"] }
form_urlencoded = "1.1.0"
rand = "0.8.5"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
anyhow = "1.0.71"
directories-next = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
runtime-format = "0.1.3"
rust-i18n = "2.2.1"
ehttp = "0.5.0"
serde_json = "1.0.140"
winit = { version = "0.29.15", features = ["default"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }  # enable js feature in indirect "rand" dependency 
wasm-bindgen-futures = "0.4"
base64 = "0.22.1"
web-sys = { version = "0.3", features = [
    "History",
    "UrlSearchParams",
    # access to the dom to hide the loading text and access to the current url 
] }
wasm-bindgen = "0.2.99"
log = "0.4"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
arboard = "3.2.0"
native-dialog = "0.6.4"
rusqlite = { version = "0.35.0", features = ["bundled"] }
percent-encoding = "2.3.1"  # TODO: get rid of form_urlencoded in favor of percent-encoding
time = { version = "0.3.37", features = ["formatting", "parsing", "local-offset", "macros", "serde"] }

[profile.release]
codegen-units = 1
debug = false
lto = true
incremental = false
opt-level = 3
overflow-checks = false
strip = "debuginfo"
